--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "prettier"
     ],
     "rules": {
+      "eslint/no-param-reassign": "off",
       "prettier/prettier": "error",
       "import/no-duplicates": "off",
       "@typescript-eslint/camelcase": "off",
