--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gobarber-web",
+  "name": "workr-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,11 +9,11 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^16.9.0",
-    "@types/yup": "^0.26.37",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.0",
-    "@types/react-day-picker": "^5.3.0",
+    "@types/yup": "^0.26.37",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
     "axios": "^0.19.2",
@@ -22,9 +22,9 @@
     "react": "16.13.0",
     "react-day-picker": "^7.4.8",
     "react-dom": "16.13.0",
+    "react-dropzone": "^11.3.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.0",
@@ -33,7 +33,7 @@
     "yup": "^0.28.4"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^3.3.0",  
+    "@testing-library/react-hooks": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "axios-mock-adapter": "^1.18.1",
